--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="action_settings">Settings</string>
     <string name="service_description">gives notification on new rides</string>
     <string name="empty_list_message">no matches for your search radius</string>
+    <string name="no_history_message">No history yet</string>
 </resources>
